# mFAST

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  vcpkg.json
cmake/: mFASTConfig.cmake.in
src/mfast/xml_parser/: CMakeLists.txt
